feat: add command excecutor and voice decode logic

--- a/src/Presentation/AudioRecognition.Presentation/AudioRecognition.Presentation.csproj
+++ b/src/Presentation/AudioRecognition.Presentation/AudioRecognition.Presentation.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\AudioRecognition.Core\AudioRecognition.Core.csproj" />
+  </ItemGroup>
+
 </Project>
